--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="sketch.js" type="text/javascript"></script>
         <script src="libraries/DragNDrop.js" type="text/javascript"></script>
+        <script src="https://lab-web-todo-list-fugweyanb2eedga8.polandcentral-01.azurewebsites.net/socket.io/socket.io.js"></script>
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="css/site.css">
     </head>
